--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,3 +12,13 @@ data_validation:
   STATUS_FILE: artifacts/data_validation/status.txt
   ALL_REQUIRED_FILES: ["train", "test", "validation"]
   
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/samsum_dataset
+  tokenizer_name: google/pegasus-cnn_dailymail
+
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  data_path: /Users/sumit/Desktop/SUMIT/STUDY/Projects/Text-Summarizer/artifacts/data_transformation/samsum_dataset
+  model_ckpt: google/pegasus-cnn_dailymail 
